# rutube_hackathon

./: .env.example  .gitignore  README.md  api.py  pyproject.toml  rag_prototype.py  requirements-nn.txt  requirements.txt
api/: api.py  schema.py
bot/: helper_bot.py
data/: q1.parquet
data/actual/: 01_База_знаний.xlsx  02_Реальные_кейсы.xlsx  data_for_db_corrections.xlsx
data/actual/interim/: data_for_db.parquet  data_for_db_corrected.parquet  evaluation_df.parquet  evaluation_df_125.parquet  legal_for_db.parquet
data/autorag/: corpus.parquet  qa.parquet
data/from_site/md/: FAQ_ RUTUBE для Smart TV.md  FAQ_ Shorts.md  FAQ_ Доступ к управлению каналом RUTUBE.md  FAQ_ Жесты и горячие клавиши.md  FAQ_ Модерация на RUTUBE.md  FAQ_ Монетизация на RUTUBE.md  FAQ_ Перенос видео с Youtube на RUTUBE.md  FAQ_ Трансляции на RUTUBE.md  Генеральное пользовательское соглашение RUTUBE.md  Генеральное согласие на обработку персональных данных RUTUBE.md  ЛИЦЕНЗИОННОЕ СОГЛАШЕНИЕ НА ИСПОЛЬЗОВАНИЕ ПЛЕЕРА RUTUBE.md  Политика COOKIES сайта RUTUBE.md  Политика конфиденциальности и обработки персональных данных RUTUBE.md  Правила применения рекомендательных технологий на платформе RUTUBE.md  Согласие на направление рекламных сообщений и обработку персональных данных.md
models/e5_finetuned/: README.md
notebooks/: autorag_dataset_creation.ipynb  baseline-QA-hackathon.ipynb  create_synth_retrieval_dataset.ipynb  generate_chunks_and_questions.ipynb  mistral_test.ipynb  rag_baseline_chroma.ipynb  rag_baseline_primary (2).ipynb  rag_baseline_primary (3).ipynb  rag_baseline_primary.ipynb  rag_baseline_query_rewriting.ipynb  rag_baseline_sasha.ipynb  raw_docs_from_site_analysis.ipynb  rephrase_questions.ipynb  retrieval_test_dataset.ipynb  rutube_hack.ipynb  synth_questions_openai.ipynb
src/: config.py  rag_proto.py  templates.py
src/classifier/: __init__.py  classifier.py
src/metrics/: geval.py  main.py  ndcg.py  recall.py  substring.py  substring_match.py
src/rag/: embedder.py  generation.py  main.py  retriever.py
tests/metrics/: test_fraq_sum_order.py  test_ndcg.py  test_recall.py  test_substring_match.py  test_substring_match_processor.py  test_total_frac_calc.py
(+67 files in other folders)
