[tool.poetry]
name = "rutube-hackathon"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
beautifulsoup4 = "^4.12.3"
html2text = "^2024.2.26"
pandas = "^2.2.2"
langchain = "^0.3.1"
python-dotenv = "^1.0.1"
langchain-community = "^0.3.1"
openai = "^1.48.0"
deepeval = "^1.3.1"
mistralai = "^1.1.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
